[gd_scene load_steps=15 format=3 uid="uid://bn81fpt2inink"]

[ext_resource type="Script" path="res://Scenes/Enemies/Enemy2/Enemy and Missle/enemy_2.gd" id="1_x4521"]
[ext_resource type="Texture2D" uid="uid://cvl4ifaxu04uj" path="res://Assets/Ships/ship_0002.png" id="2_vtagg"]
[ext_resource type="Texture2D" uid="uid://yykpgr4whni3" path="res://Assets/Tiles/spritesheetexplosion.png" id="3_qjy3w"]
[ext_resource type="Texture2D" uid="uid://bc2tiloiq2f80" path="res://Assets/Tiles/tile_0010.png" id="4_x71qx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_njuud"]
atlas = ExtResource("3_qjy3w")
region = Rect2(0, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_urncc"]
atlas = ExtResource("3_qjy3w")
region = Rect2(36, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua0se"]
atlas = ExtResource("3_qjy3w")
region = Rect2(72, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3jld"]
atlas = ExtResource("3_qjy3w")
region = Rect2(108, 0, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_c6tre"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_njuud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urncc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua0se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3jld")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6sbv2"]
size = Vector2(30, 21)

[sub_resource type="Animation" id="Animation_l4w6c"]
resource_name = "MuzzleAnim"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Muzzle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Muzzle:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.122173, 0.122173]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f8twf"]
_data = {
"MuzzleAnim": SubResource("Animation_l4w6c")
}

[sub_resource type="Animation" id="Animation_dxeg7"]
resource_name = "explode"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite/Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [3.14159, 0.0, -3.14159]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemySprite/Explosion:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enemy2_score"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rp1au"]
_data = {
"explode": SubResource("Animation_dxeg7")
}

[node name="Enemy2" type="CharacterBody2D" groups=["enemy"]]
rotation = -1.5708
script = ExtResource("1_x4521")

[node name="EnemySprite" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 3.14159
texture = ExtResource("2_vtagg")

[node name="Explosion" type="AnimatedSprite2D" parent="EnemySprite"]
visible = false
rotation = -3.14159
sprite_frames = SubResource("SpriteFrames_c6tre")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_6sbv2")

[node name="GunPosition" type="Marker2D" parent="."]
position = Vector2(0, 10)

[node name="Muzzle" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-4.76837e-07, 10)
rotation = 0.122173
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_x71qx")

[node name="MuzzleFlash" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f8twf")
}

[node name="ShootSpeed" type="Timer" parent="."]
wait_time = 4.0

[node name="FirstShot" type="Timer" parent="."]
one_shot = true

[node name="ShipExplode" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rp1au")
}

[connection signal="timeout" from="ShootSpeed" to="." method="_on_shoot_speed_timeout"]
[connection signal="timeout" from="FirstShot" to="." method="_on_first_shot_timeout"]
